--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -2,6 +2,7 @@
   --white: #fff;
   --black: #000;
   --grey: #8c8c8c;
+  --accent: #cc0019;
 
   --ff-heading: "PPObjectSans-Heavy";
   --ff-body: "PPObjectSans-Regular";
@@ -10,8 +11,8 @@
   --ff-regular: 400;
 
   --fs-massive: clamp(2rem, 10vw + 1rem, 11.25rem);
-  --fs-big: clamp(1.7rem, 10vw + 1rem, 4.688rem);
-  --fs-medium: clamp(1.25rem, 10vw + 1rem, 2.625rem);
+  --fs-big: clamp(1.7rem, 10vw + 0.25rem, 4.688rem);
+  --fs-medium: clamp(1.25rem, 10vw + 0.25rem, 2.625rem);
   --fs-regular: 1.5rem;
   --fs-small: 1.25rem;
 }
@@ -25,6 +26,7 @@
   font-family: "PPObjectSans-Regular";
   src: url("/fonts/PPObjectSans-Regular.otf") format("opentype");
 }
+
 
 .wrap {
   width: min(100% - 4rem, 130ch);
@@ -40,6 +42,8 @@ html, body{
 body {
   font-family: var(--ff-body);
   font-size: 16px;
+  overflow-x: hidden;
+
 }
 
 .title {
@@ -56,8 +60,18 @@ body {
   color: var(--grey);
   text-decoration: none;
   font-size: var(--fs-small);
+  transition: 150ms ease-in-out;
+
+  &:hover{
+    color: var(--accent)
+  }
 }
 
 p{
   font-size: var(--fs-regular);
+}
+
+.bg--black{
+  background-color: var(--black);
+  color: var(--white);
 }
