--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -37,6 +37,8 @@ const { title } = Astro.props as Props;
 <Buttons />
 
 
+<script src='src/functions.js' type="module" />
+
 </html>
 <style lang="scss">
 	.header {
