--- a/src/components/Project_card.astro
+++ b/src/components/Project_card.astro
@@ -114,6 +114,12 @@ const { title, body, body2, jobtitle, href, imglink, imgalt, projectnum } = Astr
 			display: flex;
 			align-items: center;
 			text-decoration: none;
+			margin-bottom: 1rem;
+
+
+			@include tablet {
+				margin-bottom: 0;
+			}
 
 			&-arrow {
 				margin-left: 0.5rem;
