--- a/src/components/Project_container.astro
+++ b/src/components/Project_container.astro
@@ -11,12 +11,11 @@ import Project_card from '../components/Project_card.astro';
             body2="A full CMS database migration, a complete overhaul of the frontend and while maintaining high SEO."
             imglink="/img/placeholder.png" imgalt="alt" />
         <Project_card href="#" projectnum="/ PROJECT #2" title="IPHR (Contact Tracing)" jobtitle="System Architecture."
-            body="A highly functional, fully WCAG 2.1 compliant website."
-            body2="A full CMS database migration, a complete overhaul of the frontend and while maintaining high SEO."
+            body="High + Low Level design of the system. Focus on the Refinement of components to increase productivity of Contact Tracers using the System."
             imglink="/img/placeholder.png" imgalt="alt" />
-        <Project_card href="#" projectnum="/ PROJECT #3" title="Citizens Advice Jersey" jobtitle="Development."
-            body="A highly functional, fully WCAG 2.1 compliant website."
-            body2="A full CMS database migration, a complete overhaul of the frontend and while maintaining high SEO."
+        <Project_card href="#" projectnum="/ PROJECT #3" title="Jersey Talking Therapies"
+            jobtitle="Development + Design." body="Creating an end-to-end process for users to self refer themselves."
+            body2="Focusing on UX with modern, clean design. While keeping the website fully WCAG 2.1 Compliant."
             imglink="/img/placeholder.png" imgalt="alt" />
     </section>
 </div>
@@ -59,61 +58,61 @@ import Project_card from '../components/Project_card.astro';
 
 
     const containers = gsap.utils.toArray(".about-me");
-containers.forEach((container) => {
-  let tl = gsap.timeline({
-    scrollTrigger: {
-      trigger: container,
-      scrub: true,
-    }
-  });
+    containers.forEach((container) => {
+        let tl = gsap.timeline({
+            scrollTrigger: {
+                trigger: container,
+                scrub: true,
+            }
+        });
 
-  tl.to(container, {
-    autoAlpha: 1
-  }).to(
-    container,
-    {
-      autoAlpha: 0.3
-    },
-    0.5
-  );
-});
+        tl.to(container, {
+            autoAlpha: 1
+        }).to(
+            container,
+            {
+                autoAlpha: 0.3
+            },
+            0.3
+        );
+    });
 
+
+    /*
+        gsap.to(".about-me-first", {
+            opacity: 1,
+            duration: 1,
+            scrollTrigger: {
+                trigger: ".about-me-first",
+                start: "250",
+                end: "200", // end after scrolling 500px beyond the start
+                markers: true
+            },
+        });
     
-/*
-    gsap.to(".about-me-first", {
-        opacity: 1,
-        duration: 1,
-        scrollTrigger: {
-            trigger: ".about-me-first",
-            start: "250",
-            end: "200", // end after scrolling 500px beyond the start
-            markers: true
-        },
-    });
-
-
-    gsap.to(".about-me-second", {
-        opacity: 1,
-        duration: 1,
-        scrollTrigger: {
-            trigger: ".about-me",
-            start: "250", // when the top of the trigger hits the top of the viewport
-            end: "250", // end after scrolling 500px beyond the start
-            markers: true,
-        },
-    });
-
-    gsap.to(".about-me-third", {
-        opacity: 1,
-        duration: 1,
-        scrollTrigger: {
-            trigger: ".about-me-second",
-            start: 100, // when the top of the trigger hits the top of the viewport
-            end: "bottom 50%+=100px", // end after scrolling 500px beyond the start
-             markers: true
-        },
-    });
-*/
+    
+        gsap.to(".about-me-second", {
+            opacity: 1,
+            duration: 1,
+            scrollTrigger: {
+                trigger: ".about-me",
+                start: "250", // when the top of the trigger hits the top of the viewport
+                end: "250", // end after scrolling 500px beyond the start
+                markers: true,
+            },
+        });
+    
+        gsap.to(".about-me-third", {
+            opacity: 1,
+            duration: 1,
+            scrollTrigger: {
+                trigger: ".about-me-second",
+                start: 100, // when the top of the trigger hits the top of the viewport
+                end: "bottom 50%+=100px", // end after scrolling 500px beyond the start
+                 markers: true
+            },
+        });
+    */
 </script>
 
 
