--- a/src/components/Project_card.astro
+++ b/src/components/Project_card.astro
@@ -7,14 +7,14 @@ export interface Props {
 	href: string;
 	imglink: string;
 	imgalt: string;
-	projectnum: string
+	projectnum: string;
 }
-const { title, body, body2, jobtitle, href, imglink, imgalt, projectnum } = Astro.props;
+const { title, body, body2, jobtitle, href, imglink, imgalt, projectnum } =
+	Astro.props;
 ---
 
 <article class="project-card">
 	<div class="project-card__left">
-
 		<p class="project-card__num">
 			{projectnum}
 		</p>
@@ -35,43 +35,51 @@ const { title, body, body2, jobtitle, href, imglink, imgalt, projectnum } = Astr
 			{body2}
 		</p>
 
-		<a href={href} class="project-card__link">
+		<!-- <a target="_blank" href={href} class="project-card__link">
 			<span>VIEW PROJECT</span>
-			<img src="/svg/arrow.svg" alt="Click me arrow" class="project-card__link-arrow">
-		</a>
+			<img
+				src="/svg/arrow.svg"
+				alt="Click me arrow"
+				class="project-card__link-arrow"
+			/>
+		</a> -->
 	</div>
 
 	<div class="project-card__right">
-		<img src={imglink} alt={imgalt} class="project-card__img">
+		<img src={imglink} alt={imgalt} class="project-card__img" />
 	</div>
-
 </article>
 
 <style lang="scss">
-	@use '../styles/_mixins.scss' as *;
+	@use "../styles/_mixins.scss" as *;
 
 	.project-card {
-		flex-shrink: 0;
 		padding-bottom: 4rem;
 		margin-bottom: 4rem;
 		border-bottom: 4px solid var(--black);
 
 		@include ltab {
 			display: flex;
-			justify-content: space-between;
+			// justify-content: space-between;
+			width: 100%;
 			align-items: center;
-
-			margin-bottom: 0;
-			padding-bottom: 0;
-			border: 0;
+			padding-top: 4rem;
+			margin-bottom: 4rem;
+			padding-bottom: 4rem;
+			border-bottom: 4px solid var(--black);
 		}
 
 		&__left {
-			margin-right: 2rem;
+			margin-bottom: 2rem;
 
 			@include tablet {
-				max-width: 57ch;
+				margin-bottom: 0;
+				margin-right: 6rem;
 			}
+		}
+
+		&__right {
+			width: 100%;
 		}
 
 		&__num {
@@ -116,7 +124,6 @@ const { title, body, body2, jobtitle, href, imglink, imgalt, projectnum } = Astr
 			text-decoration: none;
 			margin-bottom: 1rem;
 
-
 			@include tablet {
 				margin-bottom: 0;
 			}
@@ -131,21 +138,14 @@ const { title, body, body2, jobtitle, href, imglink, imgalt, projectnum } = Astr
 			width: 100%;
 			height: auto;
 
+			object-fit: cover;
+			border: 2px solid black;
+			border-radius: 22px;
+
 			@include ltab {
 				max-width: 780px;
-				object-fit: cover;
-				border: 4PX SOLID black;
-				border-radius: 22px;
+				border: 4px solid black;
 			}
-		}
-	}
-
-
-	.project-card:not(:last-of-type) {
-		@include ltab {
-			padding-right: 10rem;
-			margin-right: 10rem;
-			border-right: 6px solid var(--black);
 		}
 	}
 </style>
