--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
-import '../styles/normalize.css';
-import '../styles/globals.scss';
+import "../styles/normalize.css";
+import "../styles/globals.scss";
 import Layout from "../layouts/Layout.astro";
-import Project_container from '../components/Project_container.astro';
+import Project_container from "../components/Project_container.astro";
 ---
 
 <Layout title="Homepage">
@@ -13,7 +13,9 @@ import Project_container from '../components/Project_container.astro';
 					<h1 class="hero__title title">Jonny Jones</h1>
 
 					<div class="hero__email">
-						<a href="mailto:hello@jonnyjones.dev" class="link">hello@jonnyjones.dev</a>
+						<a href="mailto:hello@jonnyjones.dev" class="link"
+							>hello@jonnyjones.dev</a
+						>
 					</div>
 
 					<div class="hero__flex">
@@ -29,9 +31,18 @@ import Project_container from '../components/Project_container.astro';
 							</div>
 
 							<ul class="hero__links">
-								<li><a href="#" class="link">LinkedIn</a></li>
+								<li>
+									<a
+										href="https://www.linkedin.com/in/jonny-jones-b748a31aa/"
+										class="link">LinkedIn</a
+									>
+								</li>
 								<li><a href="#" class="link">CV</a></li>
-								<li><a href="#" class="link">CodePen</a></li>
+								<li>
+									<a href="https://github.com/jonnyjones99" class="link"
+										>GitHub</a
+									>
+								</li>
 							</ul>
 						</div>
 					</div>
@@ -43,18 +54,21 @@ import Project_container from '../components/Project_container.astro';
 
 		<div class="bg--black">
 			<div class="wrap">
-
 				<section class="about-me about-me-first">
 					<div class="section__left">
 						<h2 class="subtitle">About Me</h2>
 					</div>
 					<div class="section__right">
-						<p>I’m a developer currently based in Jersey, Channel Islands. I love what I do and I’ve helped
-							bring
-							many websites to live during my time working.</p>
-						<p>I work the end-to-end process when it comes to building websites. From proposals, to design,
-							to
-							development. Working with clients to refine requirements, and communicating to clients.</p>
+						<p>
+							I’m a developer currently based in Jersey, Channel Islands. I love
+							what I do and I’ve helped bring many websites to live during my
+							time working.
+						</p>
+						<p>
+							I work the end-to-end process when it comes to building websites.
+							From proposals, to design, to development. Working with clients to
+							refine requirements, and communicating to clients.
+						</p>
 						<p>Times Person of the Year 2006</p>
 					</div>
 				</section>
@@ -66,47 +80,60 @@ import Project_container from '../components/Project_container.astro';
 					<div class="section__right">
 						<ul class="experience-list">
 							<li>Web Development</li>
-							<li>System Architecture</li>
+							<li>PHP</li>
 							<li>Node</li>
-							<li>JS</li>
-							<li>Shopify</li>
+							<li>Vanilla JS</li>
+							<li>Next.js/React</li>
 							<li>Wordpress Theme Development</li>
+							<li>System Architecture</li>
 							<li>Dynamics 365</li>
-							<li>Powerapps</li>
-							<li>Power BI</li>
-							<li>Ux Design</li>
-							<li>Modern Web Design</li>
+							<li>Power Apps</li>
+							<li>UX Design</li>
+							<li>Web Design</li>
 							<li>Web Animations</li>
 						</ul>
 					</div>
 				</section>
 
-				<section id="contact" class="about-me about-me-third about-me__align-center">
+				<section
+					id="contact"
+					class="about-me about-me-third about-me__align-center"
+				>
 					<div class="section__left">
 						<h2 class="subtitle">Get In Touch</h2>
 
 						<ul class="contact__links">
-							<li><a class="link" href="#">LinkedIn</a></li>
-							<li><a class="link" href="#">GitHub</a></li>
-							<li><a class="link" href="#">CodePen</a></li>
+							<li>
+								<a
+									class="link"
+									href="https://www.linkedin.com/in/jonny-jones-b748a31aa/"
+									>LinkedIn</a
+								>
+							</li>
+							<li>
+								<a class="link" href="https://github.com/jonnyjones99">GitHub</a
+								>
+							</li>
+							<li>
+								<a class="link" href="https://codepen.io/jonnyjones99"
+									>CodePen</a
+								>
+							</li>
 						</ul>
 					</div>
 					<div class="section__right">
-						<a href="mailto:hello@jonnyjones.dev" class="contact-btn">hello@jonnyjones.dev</a>
+						<a href="mailto:hello@jonnyjones.dev" class="contact-btn"
+							>hello@jonnyjones.dev</a
+						>
 					</div>
 				</section>
-
-
-
 			</div>
 		</div>
-
 	</main>
 </Layout>
 
-
 <style lang="scss">
-	@use '../styles/_mixins.scss' as *;
+	@use "../styles/_mixins.scss" as *;
 
 	.hero {
 		background-color: var(--white);
@@ -168,7 +195,6 @@ import Project_container from '../components/Project_container.astro';
 				text-decoration: none;
 				color: var(--black);
 				line-height: unset;
-
 			}
 		}
 
@@ -198,9 +224,7 @@ import Project_container from '../components/Project_container.astro';
 			display: flex;
 			padding-top: 10rem;
 			padding-bottom: 10rem;
-
 		}
-
 
 		.subtitle {
 			margin-bottom: 2rem;
@@ -213,8 +237,12 @@ import Project_container from '../components/Project_container.astro';
 	}
 
 	.about-me-third {
-		padding-bottom: 12rem;
+		padding-bottom: 6rem;
 		align-items: flex-start;
+
+		@include ltab {
+			padding-bottom: 12rem;
+		}
 
 		.contact-btn {
 			display: inline-block;
@@ -257,6 +285,11 @@ import Project_container from '../components/Project_container.astro';
 
 	.contact__links {
 		display: flex;
+		margin-bottom: 2rem;
+
+		@include tablet {
+			margin-bottom: 0;
+		}
 
 		li:not(:last-of-type) {
 			margin-right: 1.25rem;
