--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -15,6 +15,8 @@
   --fs-medium: clamp(1.25rem, 2vw + 1.5rem, 2.625rem);
   --fs-regular: 1.5rem;
   --fs-small: 1.25rem;
+
+  --card-width: 100vw;
 }
 
 @font-face {
